database initialised and sidebar layout added
  - readme file updated
  - database initialising script created
  - database genres schema created
  - database genres seeder added
  - base layout file updated
  - navigational sidebar template added
  - navigation sidebar stylesheet created

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -2,10 +2,16 @@
   <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='lib/font-awesome/font-awesome.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }} " />
   </head>
   <body>
-    
+
+    {% include 'sidebar.html' %}
+
+    {% block content %} {% endblock %}
+
     <script src="{{ url_for('static', filename='lib/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.js') }}"></script>
+    {% block footer %} {% endblock %}
   </body>
 </html>
