author and genre models and paginator created
  - author model created
  - genre model created
  - search by genre id route creted
  - paginator created
  - minor layout changes

--- a/src/static/css/collection.css
+++ b/src/static/css/collection.css
@@ -13,3 +13,31 @@
 #filters {
   width: 20%;
 }
+
+#content {
+  margin: 0;
+}
+
+.book {
+  float: left;
+  margin: 20px;
+  text-align: center;
+  font-family: Tahoma, Geneva, sans-serif;
+}
+
+.pagination {
+  position: fixed;
+  bottom: 50px;
+  margin: 10px;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  height: 300px;
+  width: 200px;
+}
