--- a/src/static/css/sidebar.css
+++ b/src/static/css/sidebar.css
@@ -57,6 +57,7 @@ body {
   max-height: 0;
   opacity: 0;
   animation: slideUp 1s;
+  display: none;
  /* transition: max-height 0.6s ease-in-out, opacity 0.6s ease-in-out 0.5s; */
 }
 
