--- a/src/static/css/collection.css
+++ b/src/static/css/collection.css
@@ -14,21 +14,44 @@
   width: 20%;
 }
 
+#search {
+  width: 1100px;
+}
+
 #content {
   margin: 0;
+  width: 70%;
+  float: left;
+  margin-left: 100px;
 }
 
 .book {
   float: left;
   margin: 20px;
+  margin-bottom: 10px;
   text-align: center;
   font-family: Tahoma, Geneva, sans-serif;
+  height: 350px;
 }
 
 .pagination {
   position: fixed;
-  bottom: 50px;
+  bottom: 20px;
   margin: 10px;
+  left: 360px;
+}
+
+.title {
+  margin-top: 5px;
+}
+
+a.image-link {
+  display: inline-block;
+}
+
+a.image-link:hover {
+  color: black;
+  opacity: .5;
 }
 
 ul {
