--- a/src/static/css/collection.css
+++ b/src/static/css/collection.css
@@ -15,30 +15,37 @@
 }
 
 #search {
-  width: 1100px;
+  width: 100%;
+}
+
+#search-input > span {
+  width: 5%;
 }
 
 #content {
   margin: 0;
-  width: 70%;
+  width: 85%;
+  height: 80%;
   float: left;
-  margin-left: 100px;
+  margin-left: 1%;
 }
 
 .book {
   float: left;
-  margin: 20px;
-  margin-bottom: 10px;
+  margin: 2%;
   text-align: center;
   font-family: Tahoma, Geneva, sans-serif;
-  height: 350px;
+  /*height: 350px;*/
+  width: 100%;
+  height: 100%;
 }
 
 .pagination {
-  position: fixed;
+  /*position: fixed;
   bottom: 20px;
   margin: 10px;
-  left: 360px;
+  left: 360px;*/
+  margin-left: 5%;
 }
 
 .title {
@@ -47,6 +54,8 @@
 
 a.image-link {
   display: inline-block;
+  width: 18%;
+  height: 50%;
 }
 
 a.image-link:hover {
@@ -61,6 +70,8 @@ ul {
 }
 
 img {
-  height: 300px;
-  width: 200px;
+  /*height: 300px;
+  width: 200px;*/
+  height: 80%;
+  width: 80%;
 }
