--- a/src/templates/item_view.html
+++ b/src/templates/item_view.html
@@ -46,7 +46,7 @@
           <div class="panel-heading">
             <div class="input-group">
               <input class="form-control" type="text" id="username" name="username" placeholder="Username" />
-              <span class="input-group-addon">
+              <span class="input-group-addon" style="width: 20%;">
                 <span class="label label-primary">Rate</span>
                 <i class="fa fa-star-o"></i>
                 <i class="fa fa-star-o"></i>
