--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -4,17 +4,20 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='lib/font-awesome/font-awesome.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='lib/select2/css/select2.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }} " />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/search_bar.css') }} " />
     {% block header %} {% endblock %}
   </head>
   <body>
 
     {% include 'sidebar.html' %}
+    {% include 'search_bar.html' %}
 
     {% block content %} {% endblock %}
     <script src="{{ url_for('static', filename='lib/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.js') }}"></script>
     <script src="{{ url_for('static', filename='lib/select2/js/select2.js') }}"></script>
     <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/search_bar.js') }}"></script>
     {% block footer %} {% endblock %}
   </body>
 </html>
