search engine first implementation

--- a/src/templates/search_bar.html
+++ b/src/templates/search_bar.html
@@ -11,6 +11,6 @@
       <option value="3">Genre</option>
     </select>
   
-    <input class="form-control"  type="submit" name="submit" id="submit" />
+    <button class="form-control btn btn-default" id="search-submit">Search</button>
   </form>
 </div>
