--- a/src/templates/item_view.html
+++ b/src/templates/item_view.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div id="main">
-    <div class="cover-container">
+    <div id="cover-container">
      <img src="{{ url_for('static', filename=book.cover) }}" /> 
     </div>
     
