--- a/src/static/css/item_view.css
+++ b/src/static/css/item_view.css
@@ -1,8 +1,3 @@
-.cover-container > img {
-  margin: 30px;
-  float: left;
-}
-
 .star-rating i {
   margin-top: 30px;
 }
@@ -28,8 +23,21 @@
   width: 20px;
   height: 20px;
   margin: 0 auto;
-  /*display: none;*/
   animation: spin 1s linear infinite;
+}
+
+.error {
+  position: absolute;
+  top: -55px;
+  width: 100%;
+  z-index: 9999;
+  text-align: center;
+  animation: slideUp 0.5s ease-in;
+}
+
+.error.active {
+  top: 0;
+  animation: slideDown 0.5s ease-out;
 }
 
 .panel-heading {
@@ -86,7 +94,24 @@
   background-color: black;
 }
 
+#cover-container > img {
+  margin: 30px;
+  float: left;
+  height: 500px;
+  width: 321px;
+}
+
 @keyframes spin {
   0%    { transform: rotate(0deg); }
   100%  { transform: rotate(360deg); }
+}
+
+@keyframes slideDown {
+  0%    { top: -55px; }
+  100%  { top: 0; }
+}
+
+@keyframes slideUp {
+  0%    { top: 0; }
+  100%  { top: -55px; }
 }
