--- a/src/static/css/collection.css
+++ b/src/static/css/collection.css
@@ -16,8 +16,11 @@
   margin: 2%;
   text-align: center;
   font-family: Tahoma, Geneva, sans-serif;
-  margin: 10px;
-  left: 360px;*/
+  width: 100%;
+  height: 100%
+}
+
+.pagination {
   margin-left: 5%;
 }
 
@@ -43,7 +46,6 @@ ul {
 }
 
 img {
-  width: 200px;*/
   height: 80%;
   width: 80%;
 }
