--- a/src/templates/item_view.html
+++ b/src/templates/item_view.html
@@ -25,6 +25,7 @@
       <p><strong>Publisher:</strong> {{ book.publisher }}</p>
       <p><strong>Pages:</strong> {{ book.pages }}</p>
       <p><strong>Year:</strong> {{ book.year }}</p>
+      <p>{{ book.description }}</p>
     </div>
     
     <!--<div id="authors-info">
