--- a/src/templates/item_view.html
+++ b/src/templates/item_view.html
@@ -7,7 +7,7 @@
 {% block content %}
   <div id="main">
     <div id="cover-container">
-     <img src="{{ url_for('static', filename=book.cover) }}" /> 
+     <img src="{{ book.cover }}" /> 
     </div>
     
     <div class="star-rating">
