--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -3,17 +3,15 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='lib/font-awesome/font-awesome.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='lib/select2/css/select2.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }} " />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/search_bar.css') }} " />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }} " />
   </head>
   <body>
     <div id="login-container">
+      <h2>Login to your account</h2>
       <form class="" action="" method="POST" name="login-form">
-        <label for="username">Username</label>
-        <input class="form-control" type="text" name="username" id="username" />
-        <label for="password">Password</label>
-        <input class="form-control" type="password" name="password" id="password" />
-        <button id="login-btn">Login</button>
+        <input class="form-control" type="text" name="username" id="username" placeholder="Username" />
+        <input class="form-control" type="password" name="password" id="password" placeholder="Password" />
+        <button class="btn btn-primary form-control" id="login-btn">Login</button>
       </form>
     </div><!-- login-container -->
 
