--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -11,12 +11,12 @@
       <li id="genres" class="list-item header">
         <a href="#"><i class="fa fa-book"></i> Genres <i class="fa fa-chevron-circle-right arrow"></i></a>
       </li>
-      <ul class="sidebar-list sublist">
+      <ul id="genres-sublist" class="sidebar-list sublist">
         {% if admin %}
         <li data-toggle="modal" data-target="#new-genre" class="list-item sublist-item admin"><a id="show-genre-form" href="#">Create genre</a></li>
         {% endif %}
         {% for genre in genres %}
-        <li id="genres-sublist" class="list-item sublist-item {% if genre_id == genre.id %} active {% endif %}">
+        <li class="list-item sublist-item {% if genre_id == genre.id %} active {% endif %}">
           <a id="{{ genre.id }}"  href="/genres/{{ genre.id }}">{{ genre.name }}</a>
         </li>
         {% endfor %}
@@ -25,7 +25,7 @@
       <li id="authors" class="list-item header">
         <a href="#"><i class="fa fa-user"></i> Authors <i class="fa fa-chevron-circle-right arrow"></i></a>
       </li>
-      <ul class="sidebar-list sublist">
+      <ul id="authors-sublist"  class="sidebar-list sublist">
         {% if admin %}
         <li data-toggle="modal" data-target="#new-author" class="list-item sublist-item admin"><a href="#">Create author</a></li>
         {% endif %}
@@ -35,6 +35,9 @@
         </li>
         {% endfor %}
       </ul>
+      {% if admin %}
+      <li data-toggle="modal" data-target="#new-book" class="list-item sublist-item admin"><a id="show-book-form" href="#">Create book</a></li>
+      {% endif %}
     </ul>
   </div>
 
@@ -59,6 +62,104 @@
       </div><!-- modal-content -->
     </div><!-- modal-dialog -->
   </div><!-- new-genre -->
+  
+  <div class="modal fade" id="new-author" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">New Author Form</h4>
+        </div><!-- modal-header -->
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="first-name" class="control-label">First name*</label>
+              <input type="text" class="form-control" id="first-name" />
+            
+              <label for="last-name" class="control-label">Last name*</label>
+              <input type="text" class="form-control" id="last-name" />
+              
+              <label for="date-of-birth" class="control-label">Date of birth*</label>
+              <input type="date" class="form-control" id="date-of-birth" />
+
+              <label for="date-of-dead" class="control-label">Date of dead</label>
+              <input type="date" class="form-control" id="date-of-dead" />
+              
+              <label for="author-photo" class="control-label">Author photo*</label>
+              <div class="input-group">
+                <input type="file" class="form-control" id="author-photo" />
+                <span class="input-group-btn">
+                  <button class="btn btn-primary" id="load-file">Load</button>
+                </span>
+              </div><!-- input-group -->
+        </div><!-- form-group -->
+          </form>
+        </div><!-- modal-body -->
+        <div class="modal-footer">
+          <button id="send-author-form" class="btn btn-primary">Create</button>
+        </div><!-- modal-footer -->
+      </div><!-- modal-content -->
+    </div><!-- modal-dialog -->
+  </div><!-- new-author -->
+  
+  <div class="modal fade" id="new-book" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">New Book Form</h4>
+        </div><!-- modal-header -->
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="book-title" class="control-label">Title*</label>
+              <input type="text" class="form-control" id="book-title" />
+
+              <label for="book-authors">Authors*</label>
+              <select class="form-control" id="book-authors" multiple="multiple" style="width: 100%">
+                {% for author in authors %}
+                <option value="{{ author.id }}">{{ author.first_name }} {{ author.last_name }}</option>
+                {% endfor %}
+              </select>
+              
+            
+              <label for="publisher" class="control-label">Publisher*</label>
+              <input type="text" class="form-control" id="publisher" />
+             
+              <label for="book-year">Year*</label>
+              <select class="form-control" id="book-year">
+                {% for i in range(1900, 2017) %}
+                <option value="{{ i }}">{{ i }}</option>
+                {% endfor %}
+              </select>
+
+              <label for="book-genre">Genre*</label>
+              <select class="form-control" id="book-genre">
+                {% for genre in genres %}
+                <option value="{{ genre.id }}">{{ genre.name }}</option>
+                {% endfor %}
+              </select>
+
+              <label for="book-pages">Pages*</label>
+              <input type="number" class="form-control" id="book-pages" />
+
+              <label for="book-description">Description</label>
+              <textarea rows="4" class="form-control" id="book-description"></textarea>
+              
+              <label for="book-cover" class="control-label">Cover*</label>
+              <div class="input-group">
+                <input type="file" class="form-control" id="book-cover" />
+                <span class="input-group-btn">
+                  <button class="btn btn-primary" id="load-file">Load</button>
+                </span>
+              </div><!-- input-group -->
+        </div><!-- form-group -->
+          </form>
+        </div><!-- modal-body -->
+        <div class="modal-footer">
+          <button id="send-book-form" class="btn btn-primary">Create</button>
+        </div><!-- modal-footer -->
+      </div><!-- modal-content -->
+    </div><!-- modal-dialog -->
+  </div><!-- new-author -->
 {% endif %}
 
 </div>
