--- a/src/templates/comment.html
+++ b/src/templates/comment.html
@@ -1,6 +1,6 @@
 <div class="comment">
   <div class="comment-header">
-    <p><strong>{{ comment.username }}</strong> {{ comment.time }}</p>
+    <p><strong>{{ comment.username }}<span class="pull-right">{{ comment.time }}</span></strong></p>
   </div>
   <div class="comment-body">
     {{ comment.comment }}
