--- a/src/static/css/item_view.css
+++ b/src/static/css/item_view.css
@@ -61,6 +61,29 @@
 .comment-body {
   border-bottom: 1px dotted #000000;
   padding-bottom: 5px;
+  word-wrap: break-word;
+}
+
+.author {
+  float: left;
+  margin: 20px;
+  text-align: center;
+}
+
+#book-container {
+  height: 40%;
+}
+
+#authors-info {
+  width: 50%;
+  float: left;
+}
+
+#authors-info img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  float: left;
 }
 
 #rating-container {
