report updated, title added

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }} " />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/search_bar.css') }} " />
     {% block header %} {% endblock %}
+
+    <title>Books Catalogue</title>
   </head>
   <body>
 
