file reader input filed cleared after load

--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -57,7 +57,7 @@
           </form>
         </div><!-- modal-body -->
         <div class="modal-footer">
-          <button id="send-genre-form" class="btn btn-primary">Create</button>
+          <button id="send-genre-form" class="btn btn-primary" style="width: 70px;">Create</button>
         </div><!-- modal-footer -->
       </div><!-- modal-content -->
     </div><!-- modal-dialog -->
@@ -98,14 +98,14 @@
               <div class="input-group">
                 <input type="file" class="form-control" id="author-photo" />
                 <span class="input-group-btn">
-                  <button class="btn btn-primary" id="load-file">Load</button>
+                  <button class="btn btn-primary" id="load-file" style="width: 70px;">Load</button>
                 </span>
               </div><!-- input-group -->
         </div><!-- form-group -->
           </form>
         </div><!-- modal-body -->
         <div class="modal-footer">
-          <button id="send-author-form" class="btn btn-primary">Create</button>
+          <button id="send-author-form" class="btn btn-primary" style="width: 70px">Create</button>
         </div><!-- modal-footer -->
       </div><!-- modal-content -->
     </div><!-- modal-dialog -->
@@ -159,14 +159,14 @@
               <div class="input-group">
                 <input type="file" class="form-control" id="book-cover" />
                 <span class="input-group-btn">
-                  <button class="btn btn-primary" id="load-file">Load</button>
+                  <button class="btn btn-primary" id="load-file" style="width: 70px">Load</button>
                 </span>
               </div><!-- input-group -->
         </div><!-- form-group -->
           </form>
         </div><!-- modal-body -->
         <div class="modal-footer">
-          <button id="send-book-form" class="btn btn-primary">Create</button>
+          <button id="send-book-form" class="btn btn-primary" style="width: 70px">Create</button>
         </div><!-- modal-footer -->
       </div><!-- modal-content -->
     </div><!-- modal-dialog -->
